# CicdExperiment

./: baseproject.code-workspace
.github/workflows/: python-lint-test.yml
pythonbase/: log  makefile  pyproject.toml  readme.md
pythonbase/src/: sample.py
pythonbase/tests/: test_sample.py
