[tool.poetry]
name = "pythonbase"
version = "0.1.0"
description = ""
authors = ["Keisuke Ueda <keisuke.ueda@globe-ing.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.2"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
